<resources>
    <string name="app_name">Arch Samples</string>
    <string name="title_new_word">New word</string>
    <string name="welcome_title">Welcome to Guess Word</string>
    <string name="start_game">Start game</string>
    <string name="new_word">New word</string>
    <string name="earth">Earth</string>
    <string name="timer">8s</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="your_score">Your score: 0/10</string>
    <string name="play_again">Play again</string>
    <string name="stop">Stop</string>
</resources>